<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true" >

    <TextView
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/myEmail"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/myEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="@string/mailAccount"
        android:textColor="#000000" >
    </EditText>

    <TextView
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/myPassword"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/myPassword"
        android:layout_column="1"
        android:layout_row="1"
        android:editable="true"
        android:enabled="true"
        android:inputType="textPassword"
        android:padding="5dp"
        android:text="@string/mailPassword"
        android:textColor="#000000" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/contact"
        android:textSize="24dip" />

    <EditText
        android:id="@+id/contactName1"
        android:layout_column="0"
        android:layout_row="3"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="paul"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="paultchan@yahoo.com"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/contactName2"
        android:layout_column="0"
        android:layout_row="4"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="tony"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="paulchennk@yahoo.com"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/contactName3"
        android:layout_column="0"
        android:layout_row="5"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="david"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="davidchennk@gmail.com"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/contactName4"
        android:layout_column="0"
        android:layout_row="6"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="davis"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="davischennk@gmail.com"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/contactName5"
        android:layout_column="0"
        android:layout_row="7"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text="allen"
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="allen.kuo@timebyte.com"
        android:textColor="#000000" >
    </EditText>

    <EditText
        android:id="@+id/contactName6"
        android:layout_column="0"
        android:layout_row="8"
        android:editable="true"
        android:enabled="true"
        android:padding="5dp"
        android:text=""
        android:textColor="#000000"
        android:width="100dp" />

    <EditText
        android:id="@+id/contactEmail6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:editable="true"
        android:enabled="true"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text=""
        android:textColor="#000000" >
    </EditText>

    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:text="@string/addContact" />

</GridLayout>